/*
 * Copyright (C) 2004-2016 Michael Medin
 *
 * This file is part of NSClient++ - https://nsclient.org
 *
 * NSClient++ is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * NSClient++ is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with NSClient++.  If not, see <http://www.gnu.org/licenses/>.
 */

#pragma once

#include <nscapi/nscapi_protobuf_command.hpp>
#include <client/command_line_parser.hpp>
#include <nscapi/nscapi_targets.hpp>

namespace po = boost::program_options;
namespace sh = nscapi::settings_helper;

#include "../modules/NSCPClient/nscp_client.hpp"

class check_nscp {
 private:
  client::configuration client_;

 public:
  check_nscp();
  void query(const PB::Commands::QueryRequestMessage &request, PB::Commands::QueryResponseMessage &response);
};